--- a/styles/app.css
+++ b/styles/app.css
@@ -253,18 +253,18 @@ textarea,
       background-position: center;
       background-size: cover;
       border-radius: 40px;
-      /* text-align: center; */
       margin: 0 auto; }
-    /* line 316, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 314, D:/Documents/orderdrink_front/styles/app.scss */
     .comment_card .comment_card_layout_left .comment_name {
       height: 20px;
       line-height: 20px;
       text-align: center;
-      font-size: 14px; }
-  /* line 323, D:/Documents/orderdrink_front/styles/app.scss */
+      font-size: 8px;
+      color: #777; }
+  /* line 322, D:/Documents/orderdrink_front/styles/app.scss */
   .comment_card .comment_card_layout_right {
     position: relative; }
-    /* line 325, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 324, D:/Documents/orderdrink_front/styles/app.scss */
     .comment_card .comment_card_layout_right .comment_message {
       line-height: 18px;
       font-size: 14px;
@@ -272,21 +272,21 @@ textarea,
       word-wrap: break-word;
       white-space: pre-wrap;
       text-overflow: ellipsis;
-      padding-left: 70px;
+      padding-left: 80px;
       box-sizing: border-box;
       padding-top: 25px; }
-    /* line 336, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 335, D:/Documents/orderdrink_front/styles/app.scss */
     .comment_card .comment_card_layout_right star-rating {
       position: absolute;
       top: 0;
-      left: 70px;
+      left: 80px;
       line-height: 0; }
-      /* line 341, D:/Documents/orderdrink_front/styles/app.scss */
+      /* line 340, D:/Documents/orderdrink_front/styles/app.scss */
       .comment_card .comment_card_layout_right star-rating ul {
         height: 20px;
         line-height: 20px;
         font-size: 10px; }
-    /* line 347, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 346, D:/Documents/orderdrink_front/styles/app.scss */
     .comment_card .comment_card_layout_right .comment_time {
       position: absolute;
       top: 0px;
@@ -298,13 +298,13 @@ textarea,
 
 /*飲料店的頁面下方評論*/
 /*飲料店評論*/
-/* line 361, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 360, D:/Documents/orderdrink_front/styles/app.scss */
 .to-wrapper {
   line-height: 1;
   height: 62px;
   padding: 10px; }
 
-/* line 367, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 366, D:/Documents/orderdrink_front/styles/app.scss */
 .to-image {
   width: 42px;
   height: 42px;
@@ -312,36 +312,36 @@ textarea,
   -webkit-border-radius: 4px;
   background-color: #ccc; }
 
-/* line 375, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 374, D:/Documents/orderdrink_front/styles/app.scss */
 .to-name {
   font-weight: 500;
   font-size: 17px;
   margin-bottom: 4px; }
 
-/* line 381, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 380, D:/Documents/orderdrink_front/styles/app.scss */
 .to-email {
   font-size: 14px;
   opacity: 0.4; }
 
-/* line 386, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 385, D:/Documents/orderdrink_front/styles/app.scss */
 .text-input {
   margin-top: 4px; }
 
-/* line 390, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 389, D:/Documents/orderdrink_front/styles/app.scss */
 .textarea {
   margin-top: 4px; }
 
 /*飲料店評論*/
 /*設定頁面*/
-/* line 396, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 395, D:/Documents/orderdrink_front/styles/app.scss */
 .profile-wrapper {
   padding: 16px 10px 0 10px; }
 
-/* line 400, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 399, D:/Documents/orderdrink_front/styles/app.scss */
 .profile-image-wrapper {
   width: 60px; }
 
-/* line 404, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 403, D:/Documents/orderdrink_front/styles/app.scss */
 .profile-image {
   width: 50px;
   height: 50px;
@@ -349,34 +349,34 @@ textarea,
   -webkit-border-radius: 4px;
   border: inset 1px rgba(0, 0, 0, 0.3); }
 
-/* line 412, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 411, D:/Documents/orderdrink_front/styles/app.scss */
 .profile-name {
   font-size: 18px;
   padding: 4px 0 2px 0; }
 
-/* line 417, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 416, D:/Documents/orderdrink_front/styles/app.scss */
 .profile-des {
   font-size: 15px;
   opacity: 0.4; }
 
 /*設定頁面*/
 /*飲料的 dialog*/
-/* line 424, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 423, D:/Documents/orderdrink_front/styles/app.scss */
 .drink_menu_dialog {
   height: 370px; }
 
-/* line 428, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 427, D:/Documents/orderdrink_front/styles/app.scss */
 .drink_menu_dialog .content {
   width: 100%;
   padding: 10px;
   box-sizing: border-box; }
 
-/* line 434, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 433, D:/Documents/orderdrink_front/styles/app.scss */
 .drink_menu_dialog .content .button-bar {
   width: 100%;
   margin-bottom: 15px; }
 
-/* line 439, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 438, D:/Documents/orderdrink_front/styles/app.scss */
 .list-item-action {
   position: absolute;
   right: 10px;
@@ -384,7 +384,7 @@ textarea,
   font-size: 20px;
   opacity: 0.3; }
 
-/* line 449, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 448, D:/Documents/orderdrink_front/styles/app.scss */
 .list-item-deleteicon {
   position: absolute;
   left: 0px;
@@ -394,14 +394,14 @@ textarea,
   text-align: center;
   height: 44px; }
 
-/* line 459, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 458, D:/Documents/orderdrink_front/styles/app.scss */
 .list-item-note {
   position: absolute;
   right: 56px;
   top: 0px;
   font-size: 14px; }
 
-/* line 466, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 465, D:/Documents/orderdrink_front/styles/app.scss */
 .list__item.list__item--inset.note {
   padding-left: 44px;
   font-size: 14px;
@@ -410,7 +410,7 @@ textarea,
 
 /*飲料的 dialog*/
 /*notification*/
-/* line 475, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 474, D:/Documents/orderdrink_front/styles/app.scss */
 .notify-info {
   position: relative;
   width: 90%;
@@ -421,7 +421,7 @@ textarea,
   -webkit-border-radius: 4px;
   border-radius: 4px;
   height: 42px; }
-  /* line 485, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 484, D:/Documents/orderdrink_front/styles/app.scss */
   .notify-info span {
     display: block;
     margin-left: 50px;
@@ -429,11 +429,11 @@ textarea,
     margin-bottom: 4px;
     line-height: 13px;
     color: #aaa; }
-    /* line 492, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 491, D:/Documents/orderdrink_front/styles/app.scss */
     .notify-info span:nth-child(1) {
       font-size: 14px;
       color: #333; }
-  /* line 497, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 496, D:/Documents/orderdrink_front/styles/app.scss */
   .notify-info i {
     position: absolute;
     left: 0px;
@@ -453,7 +453,7 @@ textarea,
 
 /*notification*/
 /*edit profile*/
-/* line 520, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 519, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-card {
   width: 100%;
   text-align: center;
@@ -464,7 +464,7 @@ textarea,
   text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
   position: relative; }
 
-/* line 531, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 530, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-image {
   height: 100px;
   width: 100px;
@@ -477,11 +477,11 @@ textarea,
   margin: 0 auto;
   transition: .2s all; }
 
-/* line 544, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 543, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-image.loading {
   margin: 40px auto; }
 
-/* line 548, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 547, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-image.loading:after {
   content: '';
   background: trasparent;
@@ -508,13 +508,13 @@ textarea,
   100% {
     -webkit-transform: rotateZ(360deg); } }
 
-/* line 581, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 580, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-label-avatar {
   display: block;
   width: 100%;
   height: 100%; }
 
-/* line 587, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 586, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-label-background {
   position: absolute;
   top: 0px;
@@ -523,11 +523,11 @@ textarea,
   width: 50px;
   height: 50px; }
 
-/* line 596, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 595, D:/Documents/orderdrink_front/styles/app.scss */
 .background-icon {
   margin-top: 10px; }
 
-/* line 600, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 599, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-file {
   position: absolute;
   left: 0;
@@ -539,7 +539,7 @@ textarea,
   height: 100%;
   visibility: hidden; }
 
-/* line 612, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 611, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-shadow {
   background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.65) 100%);
   /* FF3.6+ */
@@ -560,7 +560,7 @@ textarea,
   left: 0;
   bottom: 0; }
 
-/* line 641, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 640, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-name {
   margin: 20px 0 10px 0;
   font-weight: 600;
@@ -569,7 +569,7 @@ textarea,
   position: relative;
   z-index: 5; }
 
-/* line 650, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 649, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-id {
   margin: 0 0 5px 0;
   font-size: 14px;
@@ -577,7 +577,7 @@ textarea,
   position: relative;
   z-index: 6; }
 
-/* line 658, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 657, D:/Documents/orderdrink_front/styles/app.scss */
 .eprofile-desc {
   font-size: 15px;
   opacity: 0.6;
@@ -585,31 +585,31 @@ textarea,
   text-align: center;
   margin: 0 auto; }
 
-/* line 666, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 665, D:/Documents/orderdrink_front/styles/app.scss */
 .info-col {
   height: 60px;
   line-height: 1;
   padding: 12px 0 12px 4px; }
 
-/* line 672, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 671, D:/Documents/orderdrink_front/styles/app.scss */
 .info-num {
   font-size: 16px;
   font-weight: 500;
   opacity: 0.8; }
 
-/* line 678, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 677, D:/Documents/orderdrink_front/styles/app.scss */
 .info-unit {
   margin-top: 6px;
   font-size: 14px;
   opacity: 0.4; }
 
 /*edit profile*/
-/* line 686, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 685, D:/Documents/orderdrink_front/styles/app.scss */
 .rating {
   margin: 0;
   padding: 0;
   display: inline-block; }
-  /* line 690, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 689, D:/Documents/orderdrink_front/styles/app.scss */
   .rating li {
     padding: 1px;
     color: #ddd;
@@ -618,63 +618,63 @@ textarea,
     list-style-type: none;
     display: inline-block;
     cursor: pointer; }
-    /* line 698, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 697, D:/Documents/orderdrink_front/styles/app.scss */
     .rating li.filled {
       color: #fd0; }
-  /* line 702, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 701, D:/Documents/orderdrink_front/styles/app.scss */
   .rating.readonly li.filled {
     color: #666; }
 
-/* line 707, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 706, D:/Documents/orderdrink_front/styles/app.scss */
 .reportsuccess {
   text-align: center;
   padding-top: 30px;
   width: 90%;
   margin-left: 5%;
   color: #78C0A8; }
-  /* line 713, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 712, D:/Documents/orderdrink_front/styles/app.scss */
   .reportsuccess i {
     font-size: 60px; }
-  /* line 716, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 715, D:/Documents/orderdrink_front/styles/app.scss */
   .reportsuccess h4 {
     margin: 5px; }
-  /* line 719, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 718, D:/Documents/orderdrink_front/styles/app.scss */
   .reportsuccess p {
     font-size: 14px; }
 
-/* line 725, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 724, D:/Documents/orderdrink_front/styles/app.scss */
 .near_page .card {
   height: 100%;
   position: relative;
   display: block;
   margin: 0; }
-  /* line 730, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 729, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-image {
     height: 100%; }
-    /* line 732, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 731, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-image .near_buttons {
       position: absolute;
       top: 5px;
       left: 5px;
       z-index: 1; }
-      /* line 737, D:/Documents/orderdrink_front/styles/app.scss */
+      /* line 736, D:/Documents/orderdrink_front/styles/app.scss */
       .near_page .card .card-image .near_buttons button {
         padding: 0 10px; }
-    /* line 741, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 740, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-image #googlemap {
       height: 100%;
       width: 100%; }
-  /* line 746, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 745, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-footer {
     position: absolute;
     bottom: 0px;
     left: 0;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.8); }
-  /* line 753, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 752, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-avatar {
     padding: 18px 48px 18px 84px; }
-    /* line 755, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 754, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar .avatar {
       position: absolute;
       border-radius: 50%;
@@ -686,19 +686,19 @@ textarea,
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat; }
-    /* line 765, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 764, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar .title {
       font-size: 24px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 772, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 771, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar p {
       margin: 6px 0 0 0;
       font-size: 18px;
       line-height: 18px; }
-    /* line 777, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 776, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar i {
       display: -webkit-box;
       display: -webkit-flex;
@@ -716,7 +716,7 @@ textarea,
       right: 16px;
       height: 100%;
       font-size: 36px; }
-  /* line 796, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 795, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px;
     height: 100%;
@@ -728,7 +728,7 @@ textarea,
     -ms-transform: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     z-index: -1; }
-    /* line 804, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 803, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-reveal.active {
       z-index: 1;
       -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -741,11 +741,11 @@ textarea,
       -webkit-transform: translateY(-100%);
       -ms-transform: translateY(-100%);
       transform: translateY(-100%); }
-    /* line 810, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 809, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-reveal .card-header {
       width: 100%;
       height: 120px; }
-      /* line 813, D:/Documents/orderdrink_front/styles/app.scss */
+      /* line 812, D:/Documents/orderdrink_front/styles/app.scss */
       .near_page .card .card-reveal .card-header .card-avatar {
         padding: 28px 48px 28px 84px;
         width: 100%;
@@ -753,14 +753,14 @@ textarea,
         display: block;
         background-color: #fff;
         z-index: 2; }
-    /* line 823, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 822, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-reveal .ons-scroller {
       height: 100%;
       padding: 0px; }
-      /* line 826, D:/Documents/orderdrink_front/styles/app.scss */
+      /* line 825, D:/Documents/orderdrink_front/styles/app.scss */
       .near_page .card .card-reveal .ons-scroller .list-item-container {
         padding: 18px 0px 18px 74px; }
-        /* line 828, D:/Documents/orderdrink_front/styles/app.scss */
+        /* line 827, D:/Documents/orderdrink_front/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .avatar {
           position: absolute;
           left: 12px;
@@ -771,31 +771,31 @@ textarea,
           background-position: center;
           background-size: cover;
           background-repeat: no-repeat; }
-        /* line 837, D:/Documents/orderdrink_front/styles/app.scss */
+        /* line 836, D:/Documents/orderdrink_front/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .name {
           font-weight: 900;
           line-height: 16px;
           font-size: 18px; }
-        /* line 842, D:/Documents/orderdrink_front/styles/app.scss */
+        /* line 841, D:/Documents/orderdrink_front/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .desc {
           margin: 6px 0 0 0;
           line-height: 16px;
           font-size: 14px; }
-        /* line 847, D:/Documents/orderdrink_front/styles/app.scss */
+        /* line 846, D:/Documents/orderdrink_front/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .location {
           color: #757575;
           font-size: 12px;
           margin-left: 6px; }
-          /* line 851, D:/Documents/orderdrink_front/styles/app.scss */
+          /* line 850, D:/Documents/orderdrink_front/styles/app.scss */
           .near_page .card .card-reveal .ons-scroller .list-item-container .location:after {
             content: 'km'; }
 
-/* line 861, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 860, D:/Documents/orderdrink_front/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 866, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 865, D:/Documents/orderdrink_front/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
