--- a/lib/onsen/css/onsenui.css
+++ b/lib/onsen/css/onsenui.css
@@ -1,4 +1,4 @@
-/*! onsenui - v1.3.6 - 2015-07-23 */
+/*! onsenui - v1.3.15 - 2016-01-19 */
 /*
 Copyright 2013-2015 ASIAL CORPORATION
 
@@ -33,6 +33,7 @@ ons-tabbar {
   left: 0;
   bottom: 0;
   right: 0;
+  overflow: hidden;
 }
 
 ons-page, ons-navigator, ons-tabbar, ons-sliding-menu, ons-split-view {
@@ -59,25 +60,25 @@ input, textarea {
   background: transparent !important;
 }
 
-.page__status-bar-fill ~ .page__content {
+.page__status-bar-fill + .page__background + .page__content {
   padding-top: 20px;
 }
 
-ons-toolbar ~ .page__content {
+ons-toolbar + .page__background + .page__content {
   top: 44px;
 }
 
-.page__status-bar-fill ~ ons-toolbar {
+.page__status-bar-fill + ons-toolbar {
   height: 64px;
 }
 
-.page__status-bar-fill ~ ons-toolbar > .center,
-.page__status-bar-fill ~ ons-toolbar > .left,
-.page__status-bar-fill ~ ons-toolbar > .right {
+.page__status-bar-fill + ons-toolbar > .center,
+.page__status-bar-fill + ons-toolbar > .left,
+.page__status-bar-fill + ons-toolbar > .right {
   padding-top: 20px;
 }
 
-.page__status-bar-fill ~ ons-toolbar ~ .page__content {
+.page__status-bar-fill + ons-toolbar + .page__background + .page__content {
   top: 64px;
   padding-top: 0px;
 }
