--- a/templates/setting/setting.html
+++ b/templates/setting/setting.html
@@ -8,17 +8,14 @@
 
     <div class="eprofile-card" back-img="{{background}}">
         <div class="eprofile-shadow"></div>
-        <label for="fileBackground" class="eprofile-label-background">
-            <ons-icon class="background-icon" icon="ion-ios-color-wand" size="25px"></ons-icon>
-            <input class="eprofile-file" id="fileBackground" type="file" name="file" accept="image/*;capture=camera" onchange="angular.element(this).scope().uploadBackground(this.files)" />
-        </label>
-
-        <div class="eprofile-image" back-img="{{avatar_thumb}}">
-            <label for="fileAvatar" class="eprofile-label-avatar">
-                <input class="eprofile-file" id="fileAvatar" type="file" name="file" accept="image/*;capture=camera" onchange="angular.element(this).scope().uploadFile(this.files)" />
-            </label>
+        <div  class="eprofile-label-background">
+            
         </div>
-        <div id="nickname" class="eprofile-name" onclick="this.focus();" contenteditable="true" ng-blur="changeName($event)" onkeypress="preventEnter">{{nickname}}</div>
+
+        <div class="eprofile-image" back-img="{{avatar}}">
+            
+        </div>
+        <div id="nickname" class="eprofile-name">{{nickname}}</div>
         <div class="eprofile-id">{{email}}</div>
         <!--        <div class="eprofile-desc">Freelance designer, software engineer and cyclist</div>-->
 
